[project]
name = "langchain-reflexion-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-tavily>=0.2.18",
]
